# Wally_proof_of_concept

./: .gitignore  README.md  pyproject.toml
app/: data_generator.py  main.py
figures/: summary_table.csv
proto/: telemetry.proto
scripts/: __init__.py  plot_selected_results.py  run_polling_benchmark.py
selected_results/: grpc_gen1000_1779050671.csv  grpc_gen1000_1779050671.json  grpc_gen1000_1779050794.csv  grpc_gen1000_1779050794.json  grpc_gen1000_1779051539.csv  grpc_gen1000_1779051539.json  long_polling_gen1000_timeout30000_1779046747.csv  long_polling_gen1000_timeout30000_1779046747.json  long_polling_gen1000_timeout30000_1779047744.csv  long_polling_gen1000_timeout30000_1779047744.json  long_polling_gen1000_timeout30000_1779047865.csv  long_polling_gen1000_timeout30000_1779047865.json  mqtt_gen1000_1779052490.csv  mqtt_gen1000_1779052490.json  mqtt_gen1000_1779052618.csv  mqtt_gen1000_1779052618.json  mqtt_gen1000_1779052741.csv  mqtt_gen1000_1779052741.json  polling_gen1000_poll1000_1779040835.csv  polling_gen1000_poll1000_1779040835.json  polling_gen1000_poll1000_1779040964.csv  polling_gen1000_poll1000_1779040964.json  polling_gen1000_poll1000_1779041088.csv  polling_gen1000_poll1000_1779041088.json  polling_gen1000_poll2000_1779041913.csv  polling_gen1000_poll2000_1779041913.json  polling_gen1000_poll2000_1779043409.csv  polling_gen1000_poll2000_1779043409.json  polling_gen1000_poll2000_1779046037.csv  polling_gen1000_poll2000_1779046037.json  polling_gen1000_poll250_1779041245.csv  polling_gen1000_poll250_1779041245.json  sse_gen1000_1779049203.csv  (+9 more)
(+20 files in other folders)
